# scomp

./: .clang  CMakeLists.txt  LICENSE.txt  README.md
include/scomp/: internal_error.hpp
include/scomp/ast/: ast.hpp  ast_fwd.hpp  definition.hpp  dump.hpp  expression.hpp  module.hpp  node_base.hpp  statement.hpp  stringize.hpp  type.hpp
include/scomp/codegen/: context.hpp  emitter.hpp  type_emitter.hpp
include/scomp/helper/: get.hpp  no_option.hpp
include/scomp/semantics/: analyze.hpp  entry.hpp  entry_fwd.hpp  error.hpp  forward_collector.hpp  scope.hpp  translate_type.hpp  type.hpp  type_check.hpp  type_fwd.hpp
include/scomp/syntax/: config.hpp  definition.hpp  expression.hpp  helper.hpp  parser.hpp  statement.hpp  type.hpp
src/: CMakeLists.txt  main.cpp
src/scomp/ast/: definition.cpp  dump.cpp  expression.cpp  module.cpp  statement.cpp
src/scomp/codegen/: emitter.cpp  type_emitter.cpp
src/scomp/semantics/: analyze.cpp  forward_collector.cpp  scope.cpp  translate_type.cpp  type.cpp  type_check.cpp
src/scomp/syntax/: definition.cpp  expression.cpp  helper.cpp  parser.cpp  statement.cpp  type.cpp
